hero section and about section

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,6 +4,8 @@
     --ph-light-purple: #BD6FF5;
     --ph-plain-white: #FDFDFD;
     --ph-plain-black: #0C0C0C;
+    --ph-black-shade: #A5A5A5;
+    --ph-black-shade-200: #D4D4D4;
 }
 
 // @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@100..900&display=swap');
